<resources>
    <string name="app_name">LUSW</string>
    <string name="help">Help</string>
    <string name="palette">color palette</string>
    <string name="legend">Legend</string>
    <string name="settings">settings</string>
    <string name="permission_statement">We did not find the available application usage information, probably because you did not give us permission to get it, but we enabled the virtual data mode, you can still set this application as wallpaper, and you can still use the palette to customize the color information. But the data displayed will be randomly generated simulation data. \nIf you want to use real data, we promise here that the software has no networking function and will not upload or collect any of your application usage information. Permission granted information is only used for wallpaper generation and local display of application usage.</string>
    <string name="authorization">go to authorization</string>
    <string name="default_group_name">other</string>

    <string name="unit_hour">%1$d time</string>
    <string name="unit_minute">%1$d points</string>
    <string name="unit_second">%1$d second</string>
    <string name="unit_millisecond">%1$d milliseconds</string>
    <string name="group_name">Group name</string>
    <string name="confirm">OK</string>
    <string name="blank_content">Please enter valid content</string>
    <string name="content_consistent">please change a name</string>
    <string name="add">add</string>
    <string name="guide_main_title">Welcome to LUSW \n (Lollipop usage stats wallpaper) \n Here is a brief introduction to how the application is used:</string>
    <string name="guide_legend">Here you can set the corresponding color for each application separately</string>
    <string name="guide_palette">Here, you can configure the colors you like, and you can also set up a nice name for them</string>
    <string name="guide_settings">Here you can adjust some additional preferences, and you can also learn about the author’s information</string>
    <string name="guide_help">When you don’t know what to do, you can click this button, it will give you some tips</string>
    <string name="guide_palette_title">Here, you can adjust the color you like. \nThe following is a brief introduction to how to use it:</string>
    <string name="guide_add">You can add colors by clicking on it</string>
    <string name="click">click</string>
    <string name="guide_click_palette_card">You can click on the color card to adjust the color or its name</string>
    <string name="drag">drag and drop</string>
    <string name="guide_drag_palette_card">You can also press and hold the color card to trigger the drag sort, and rearrange the number for the color you like</string>
    <string name="swipe">sliding</string>
    <string name="guide_swipe_palette_card">You can also slide the color card to the screen or outside of the card to remove a color card.</string>
    <string name="guide_legend_title">Here, you can associate a color you like for each application. \nThe following is a brief introduction to how to use it:</string>
    <string name="copyright">from Lollipop\n(https://github.com/Mr-XiaoLiang/)</string>
    <string name="wallpaper_update_delay">wallpaper refresh time</string>
    <string name="swap">exchange mode</string>
    <string name="build">build mode</string>
    <string name="guide_legend_swap">It can help you switch the exchange mode, in the exchange mode, you can easily switch colors for each application</string>
    <string name="guide_legend_build">It can help you switch the build mode, in the build mode, you can quickly specify the color for the application</string>
    <string name="apply">Apply</string>
    <string name="generate">Generate</string>

    <string name="apply_wallpaper_success">Wallpaper is set successfully</string>
    <string name="apply_wallpaper_error">Wallpaper setting failed</string>
    <string name="guide_apply">You can quickly set LUSW as your wallpaper through it. If you can’t find LSUW on the wallpaper setting page of the system, then it may help you</string>
    <string name="wallpaper_animation">Enable animation</string>
    <string name="wallpaper_animation_summary">After closing, the wallpaper will not show transition effects when it appears. But this will not save you power.</string>
    <string name="menu">Options</string>
    <string name="msg_retrieval_guide">Please choose a representative color for each application\nclick the confirm button in the lower right corner to enter the next step</string>
    <string name="next">Next</string>
    <string name="save_color">Save</string>
    <string name="generate_color">Generate color</string>
    <string name="generate_color_summary">This tool is mainly used to help you extract theme colors from application icons and merge them into groups. He may not fully meet your ideas, but it can help you complete some basic tasks.</string>
    <string name="generate_preference_summary">Congratulations 🎉, you have chosen a color for each application. Now you can set the number of groups, and then click the button below, we will proceed to the next step of color aggregation.</string>
    <string name="group_count">Count</string>
    <string name="generate_complete_summary">Congratulations 🎉, you have completed all application grouping work. \nNow you can choose to click the OK button below to make the settings take effect. \nOr you can go back and make some adjustments to the previous settings. \nIt should be noted that if the group name is the same as the existing name, the original color will be overwritten.</string>
    <string name="back_on_changing">Applying changes, please wait</string>
    <string name="guide_generate">It can help you quickly group applications. Although it can’t satisfy you, it can reduce part of your workload.</string>
    <string name="background">Background</string>
    <string name="guide_background">Select a picture as the background</string>
    <string name="start_loading">开始加载</string>
    <string name="end_loading_successful">Loading succeeded</string>
    <string name="end_loading_fail">Loading failed</string>
    <string name="msg_change_background">How do you want to change the background?</string>
    <string name="change">Modify</string>
    <string name="delete">Delete</string>
    <string name="start_delete">Start deletion</string>
    <string name="delete_successful">Deleted successfully</string>
    <string name="delete_fail">Delete failed</string>
    <string name="privacy_agreement_title">隐私声明</string>
    <string name="privacy_usage_stats">应用使用情况</string>
    <string name="privacy_usage_stats_detail">本应用将会收集您的应用使用时长数据（android.permission.PACKAGE_USAGE_STATS）用于生成动态壁纸图案。但是仅用于本地生成，软件不支持网络功能，绝对不会上传您的使用情况并用于其他用途。</string>
    <string name="privacy_query_all">获取全部已安装应用</string>
    <string name="privacy_query_all_detail">本应用将会获取您的设备所有已安装应用（android.permission.QUERY_ALL_PACKAGES）用于匹配并生成动态壁纸图案。但是仅用于本地生成，软件不支持网络功能，绝对不会上传您的使用情况并用于其他用途。</string>
    <string name="privacy_set_wallpaper">修改壁纸</string>
    <string name="privacy_set_wallpaper_detail">本应用将会修改您的桌面及锁屏壁纸（android.permission.SET_WALLPAPER）用于使壁纸生效。这个操作需要您的主动触发，并且由您来确认才会生效。</string>
    <string name="refuse">拒绝</string>
    <string name="allow">同意</string>

</resources>