<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/legend"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/legend"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/palette"
        android:icon="@drawable/ic_baseline_palette_24"
        android:title="@string/palette"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/helper"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/help"
        app:showAsAction="ifRoom"/>

</menu>