<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/add"
                android:icon="@drawable/ic_baseline_add_24"
                android:title="@string/add"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/helper"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/help"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>